--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 crash.log
 crash.*.log
 
+# Ignore encryption files
+encryption.json
+
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
 override.tf
